<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.touchlane.addressbook.ui.edit.binding.ErrorMessageBindingAdapter" alias="emba"/>
        <import type="com.touchlane.addressbook.ui.edit.binding.ValidationRule"/>
        <variable
            name="vm"
            type="com.touchlane.addressbook.ui.edit.CreateContactViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/info_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/save_button">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_big_12"
                android:paddingTop="@dimen/padding_big_12"
                android:paddingStart="@dimen/padding_big_12">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_first_name"
                    app:error="@{vm.contactInfo.firstNameError}"
                    app:validation="@{emba.INSTANCE.firstNameRule}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_big_12"
                        android:paddingBottom="@dimen/padding_big_12"
                        android:text="@={vm.contactInfo.firstName}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name"
                    app:error="@{vm.contactInfo.lastNameError}"
                    app:validation="@{emba.INSTANCE.lastNameRule}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_big_12"
                        android:paddingBottom="@dimen/padding_big_12"
                        android:text="@={vm.contactInfo.lastName}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    app:error="@{vm.contactInfo.emailError}"
                    app:validation="@{emba.INSTANCE.emailRule}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/padding_big_12"
                        android:paddingBottom="@dimen/padding_big_12"
                        android:text="@={vm.contactInfo.email}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    app:error="@{vm.contactInfo.phoneError}"
                    app:validation="@{emba.INSTANCE.phoneRule}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:paddingTop="@dimen/padding_big_12"
                        android:paddingBottom="@dimen/padding_big_12"
                        android:text="@={vm.contactInfo.phone}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingTop="@dimen/padding_big_12"
                        android:paddingBottom="@dimen/padding_big_12"
                        android:text="@={vm.contactInfo.address}"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/save_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_big_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_scroll_container"
            android:text="@string/save"
            android:onClick="@{() -> vm.doSave()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>